--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title>Particle Clock | Yoshihito Fujiwara</title>
+	<title>Line Clock | Yoshihito Fujiwara</title>
 	<meta name="format-detection" content="telephone=no,address=no,email=no">
 	<link rel="stylesheet" href="assets/css/styles.css" media="all">
 </head>
