--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,6 +7,15 @@
 	<title>Line Clock | Yoshihito Fujiwara</title>
 	<meta name="format-detection" content="telephone=no,address=no,email=no">
 	<link rel="stylesheet" href="assets/css/styles.css" media="all">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123577023-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'UA-123577023-1');
+	</script>
 </head>
 
 <body>
